# Safe-and-Near-Optimal-Controller-Synthesis

./: CMakeLists.txt  README.md  main.cpp  patterns.py  safeTools.h  test.py
Pid Control/: Log.txt  history_for_print1.txt  main  main.cpp
Safe Control/rest/: 4_rooms.cpp  main  pid.cpp  result_4_rooms.txt
Safe Control/test/: main  main.cpp  sss.h  utils.h
app/: LCommon.h  LConfig.h
app/include/: sss.h  utils.h
app/src/: main  main.cpp  result_4_rooms.txt
doc/: Simulation.py  Sthocastic_HG.py  hsystem.py  lastVersion.py  m1.md  m2.md  main.py  main2.py  matrix.txt  pid.py  test.py  utils.py
python/: Makefile  main.py  setup.py  utils.py
res/Pid Control/: makefile
res/Safe Control/rest/: 4_rooms  main.cpp  swh.cpp
res/Safe Control/template/: main.cpp
res/Safe Control/test/: main2.cpp
